# ElZuziGame

./: .editorconfig  .gitignore  README.md
Diagrams/: .$ECS_Diagram.drawio.bkp  .$SFML_Window_Diagram.drawio.bkp  ECS_Diagram.drawio  SFML_Window_Diagram.drawio
ZuziGame/: CMakeLists.txt  CMakeUserPresets.json  GameBase.cpp  GameBase.h  GameInitializer.cpp  GameInitializer.h  GameMain.cpp  GameRenderSystem.cpp  GameRenderSystem.h  GameWindow.cpp  GameWindow.h  ZuziGame.cpp  ZuziGame.sln  ZuziGame.vcxproj  ZuziGame.vcxproj.filters  build.ps1  clean.ps1  main.i
ZuziGame/ZuziGame/: CMakeLists.txt  ZuziGame.cpp  ZuziGame.h
ZuziGame/ZuziGame/x64/Debug/: ZuziGame.exe.recipe  ZuziGame.ilk  vc143.idb
ZuziGame/ZuziGame/x64/Debug/ZuziGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ZuziGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ZuziGame/ZuziGameCore/: GameAnimation.cpp  GameAnimation.h  GameEngine.cpp  GameEngine.h  GameEntity.cpp  GameEntity.h  GameEnumerations.hpp  GameMain.cpp  GamePreferences.h  GameResources.cpp  GameResources.h  GameSDLState.hpp  GameState.hpp  GameSyatem.h  GameSystem.cpp  GameSystem.h  GameTimer.cpp  GameTimer.h  ZuziGameCore.vcxproj  ZuziGameCore.vcxproj.filters
ZuziGame/src/: main.c
